--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_result">ResultActivity</string>
+
+    <string name="name">Name</string>
+    <string name="surname">Surname</string>
+    <string name="birthday">Birthday</string>
+
+    <string name="snackbar">You can swipe to dismiss a card!</string>
+
+    <string name="welcome">Welcome to\nSimpleForm</string>
 </resources>
